[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscorpiontrack"
version = "0.1.0"
description = "Async Python client for ScorpionTrack shared-location links."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Herbertmt978" }]
dependencies = [
  "aiohttp>=3.9,<4",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Herbertmt978/python-scorpiontrack"
Issues = "https://github.com/Herbertmt978/python-scorpiontrack/issues"
Source = "https://github.com/Herbertmt978/python-scorpiontrack"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyscorpiontrack = ["py.typed"]
